dev/non_executable_reasons_record_from_random_10k/1488.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
print 'Hello
------------------

[0;36m  File [0;32m"<ipython-input-1-09cb1d68e22d>"[0;36m, line [0;32m3[0m
[0;31m    print 'Hello[0m
[0m                ^[0m
[0;31mSyntaxError[0m[0;31m:[0m Missing parentheses in call to 'print'. Did you mean print('Hello)?

SyntaxError: Missing parentheses in call to 'print'. Did you mean print('Hello)? (<ipython-input-1-09cb1d68e22d>, line 3)

Executability                            : False
